--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-XX:MaxHeapSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=C\:\\Program Files (x86)\\Java\\jdk-1.8
