--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,6 @@ dependencies:
   flutter_map: ^6.1.0
   animated_splash_screen: ^1.3.0
   flutter_svg: ^2.0.10+1
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.18.1
   google_sign_in: ^6.1.6
   flutter_signin_button: ^2.0.0
 
@@ -48,10 +45,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/l10n/intl_en.arb
-    - lib/l10n/intl_fr.arb
-    - lib/l10n/intl_ar.arb
+    - assets/logo.svg
+
 
 
 flutter_intl:
-  enabled: true
+  enabled: false
