--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
   google_sign_in: ^6.1.6
   flutter_signin_button: ^2.0.0
   flutter_map_location_marker: ^8.0.8
+  qr_code_scanner: ^1.0.1
+  firebase_remote_config: ^4.3.8
+  encrypt: ^5.0.3
+  firebase_messaging: ^14.7.10
+
 
 
 dev_dependencies:
@@ -46,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.svg
+    - assets/bg.jpg
 
 
 
