--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,3 @@
-org.gradle.jvmargs=-XX:MaxHeapSize=2048m
+org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=C\:\\Program Files\\Java\\jdk-11.0.14
