--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.1.1
 
 
   cupertino_icons: ^1.0.6
@@ -21,16 +22,17 @@ dependencies:
   shared_preferences: ^2.2.2
   permission_handler: ^11.0.1
   geolocator: ^11.0.0
-  flutter_map: ^6.1.0
   animated_splash_screen: ^1.3.0
   flutter_svg: ^2.0.10+1
   google_sign_in: ^6.1.6
   flutter_signin_button: ^2.0.0
-  flutter_map_location_marker: ^8.0.8
+  intl: ^0.18.0
   qr_code_scanner: ^1.0.1
   firebase_remote_config: ^4.3.8
   encrypt: ^5.0.3
   firebase_messaging: ^14.7.10
+  flutter_native_splash: ^2.4.1
+  another_flutter_splash_screen: ^1.2.1
 
 
 
@@ -51,7 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.svg
-    - assets/bg.jpg
+    - assets/logo.gif
 
 
 
