--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   google_maps_flutter: ^2.1.1
 
 
@@ -33,6 +34,11 @@ dependencies:
   firebase_messaging: ^14.7.10
   flutter_native_splash: ^2.3.7
   another_flutter_splash_screen: ^1.2.1
+  intro_slider: ^3.0.0
+  flutter_expandable_fab: ^2.2.0
+  geocoding: ^3.0.0
+  flutter_dotenv: ^5.1.0
+
 
 
 
@@ -44,7 +50,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
-
+  generate: false
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -54,8 +60,7 @@ flutter:
   assets:
     - assets/logo.svg
     - assets/logo.gif
-
-
-
+    - assets/logo.png
+    - .env
 flutter_intl:
   enabled: false
