--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  google_maps_flutter: ^2.1.1
-
-
   cupertino_icons: ^1.0.6
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
@@ -24,10 +21,10 @@ dependencies:
   permission_handler: ^11.0.1
   geolocator: ^11.0.0
   animated_splash_screen: ^1.3.0
-  flutter_svg: ^2.0.10+1
   google_sign_in: ^6.1.6
   flutter_signin_button: ^2.0.0
-  intl: ^0.18.0
+  flutter_localizations:
+    sdk: flutter
   qr_code_scanner: ^1.0.1
   firebase_remote_config: ^4.3.8
   encrypt: ^5.0.3
@@ -43,6 +40,14 @@ dependencies:
   path: ^1.9.0
   flutter_local_notifications: ^17.2.2
   checkout_screen_ui: ^1.0.1
+  easy_localization: ^3.0.7
+  http: ^0.13.0
+  google_maps_flutter: ^2.2.0
+  flutter_html: ^3.0.0-beta.2
+  fluttertoast: ^8.2.8
+  url_launcher: ^6.3.0
+google_maps_webservice: ^0.0.20
+
 
 
 
@@ -66,6 +71,7 @@ flutter:
     - assets/logo.svg
     - assets/logo.gif
     - assets/logo.png
+    - assets/translations/
     - .env
 flutter_intl:
   enabled: false
