working on ride steps and logic //todo cotinue when unlocking and hiding the botom sheet and turn to navigation ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   uuid: any
   args: any
   in_app_notification: ^1.1.2
+  flutter_timer_countdown: ^1.0.7
 google_maps_webservice: ^0.0.20
 
 
